--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "schroedinger-nuxt-template",
   "type": "module",
+  "version": "2.0.0",
   "private": true,
+  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -14,40 +16,39 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "radix-vue": "^1.9.10",
-    "tailwind-merge": "^2.5.5",
+    "reka-ui": "^2.2.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@iconify-json/carbon": "^1.2.4",
-    "@nuxt/devtools": "^1.6.1",
-    "@nuxt/icon": "^1.9.0",
-    "@nuxt/test-utils": "^3.14.4",
+    "@antfu/eslint-config": "^4.11.0",
+    "@iconify-json/carbon": "^1.2.8",
+    "@nuxt/devtools": "^2.3.2",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/test-utils": "^3.17.2",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/tailwindcss": "^6.12.2",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/nuxt": "^12.0.0",
-    "eslint": "^9.16.0",
-    "happy-dom": "^15.11.7",
-    "nuxt": "^3.14.1592",
-    "nuxt-svgo": "4.0.9",
-    "shadcn-nuxt": "^0.11.3",
-    "simple-git-hooks": "^2.11.1",
-    "stylelint": "^16.11.0",
+    "@vueuse/nuxt": "^13.0.0",
+    "eslint": "^9.24.0",
+    "happy-dom": "^17.4.4",
+    "nuxt": "^3.16.2",
+    "nuxt-svgo": "4.0.17",
+    "shadcn-nuxt": "^2.0.0",
+    "simple-git-hooks": "^2.12.1",
+    "stylelint": "^16.18.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard-scss": "^14.0.0",
-    "vitest": "^2.1.6",
+    "vitest": "^3.1.1",
     "vitest-environment-nuxt": "^1.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm run lint:fix"
-  },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e",
-  "version": "2.0.0"
+  }
 }
