--- a/components.json
+++ b/components.json
@@ -1,18 +1,20 @@
 {
   "$schema": "https://shadcn-vue.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "typescript": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "assets/css/tailwind.css",
+    "css": "app/assets/css/tailwind.css",
     "baseColor": "zinc",
-    "cssVariables": true
+    "cssVariables": true,
+    "prefix": ""
   },
   "aliases": {
     "components": "@/components",
     "composables": "@/composables",
-    "lib": "@/lib",
+    "utils": "@/lib/utils",
     "ui": "@/components/ui",
-    "utils": "@/lib/utils"
-  }
+    "lib": "@/lib"
+  },
+  "iconLibrary": "lucide"
 }
