--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
@@ -37,7 +38,7 @@
     "happy-dom": "^17.4.4",
     "nuxt": "^3.16.2",
     "nuxt-svgo": "4.0.17",
-    "shadcn-nuxt": "^2.0.0",
+    "shadcn-nuxt": "2.0.0",
     "simple-git-hooks": "^2.12.1",
     "stylelint": "^16.18.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
