--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@antfu/eslint-config": "^4.11.0",
     "@iconify-json/carbon": "^1.2.8",
     "@nuxt/devtools": "^2.3.2",
+    "@nuxt/fonts": "0.11.1",
     "@nuxt/icon": "^1.11.0",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxtjs/color-mode": "^3.5.2",
